# MicroEEVEE

./: .gitignore  README.md  sendToEevee.sh  startEevee.sh  startEeveeGui.sh  startGui.sh  startMEevee.sh  startPathFinder.sh  startPathFinderReactive.sh
3D Models/: EeveeBot.stl  castor.stl
CiberEEVEE/: Utils.py  croblink3.py  eevee.py  mapgrid.py  mapping.py  pathplanner.py  utils.py
CiberSim/: Makefile  _cbsimulatorGUI.cpp.swp  cbgraph.cpp  cbsimulator.cpp  cbsimulatorGUI.cpp  cbsimulatorGUI.ui  param2018.xml  qrc_default.cpp  simulator  simulator.cpp  ui_cbsimulatorGUI.h
CiberViewer/: Makefile  Viewer  crqlabview.cpp  main.cpp  qrc_default.cpp
Docs/: deti-rob-2018_04_12.tgz  link.txt  sensors_pei.pptx
EEVEE/: ADC_example.py  ArduinoHandler.py  CameraHandler.py  GuiHandler.py  LedHandler.py  MotorHandler.py  README.txt  USHandler.py  Utils.py  core.py  fake_gpio.py  mapping.py  pathplanner.py  testUS.py  test_ir.py  test_motors.py
Legacy/MicroEEVEE/: AStar.h  AStarTest  CMakeLists.txt  FollowTheBeacon.c  FollowTheBeacon.h  FollowTheWall.c  Makefile  MazeMap.c  MazeMap.h  Sensors.c  Sensors.h  StopAtBeacon.c  mr32.c  rmi-mr32.h
MazeRunner/: DodgeObstacle.c  DodgeObstacle.h  FollowTheBeacon.c  FollowTheWall.c  Makefile  Sensors.c  Sensors.h  StopAtBeacon.c  Wander.c  Wander.h  bt.sh  main.c  rmi-mr32.c  rmi-mr32.h
MazeRunnerD2/: CMakeLists.txt  FollowTheWall.c  Sensors.c
MicroEEVEE/: .gitignore  AStar.c  AStar.h  DodgeObstacle.c  FollowTheBeacon.c  FollowTheWall.c  Makefile  MazeMap.c  (+14 more)
MicroEEVEE-Reactive/: CMakeLists.txt  FollowTheWall.c  rmi-mr32.c
(+190 files in other folders)
